--- a/src/Nuke-Fusion.Build/Nuke-Fusion.Build.csproj
+++ b/src/Nuke-Fusion.Build/Nuke-Fusion.Build.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -17,8 +17,8 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Nuke.Common" Version="9.0.3" />
-    <PackageReference Include="Plisky.Mollycoddle" Version="0.0.1" />
-    <PackageReference Include="Plisky.Versonify" Version="0.1.1" />
+    <PackageReference Include="Plisky.Mollycoddle" Version="0.1.4" />
+    <PackageReference Include="Plisky.Versonify" Version="0.1.4" />
   </ItemGroup>
 
   <ItemGroup>
