--- a/src/Nuke-Fusion.Build/Nuke-Fusion.Build.csproj
+++ b/src/Nuke-Fusion.Build/Nuke-Fusion.Build.csproj
@@ -12,13 +12,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.2" />
     <PackageReference Include="NuGet.CommandLine" Version="6.12.2">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Nuke.Common" Version="9.0.3" />
+    <PackageReference Include="Plisky.Diagnostics" Version="3.2.2" />
+    <PackageReference Include="Plisky.Listeners" Version="3.2.2" />
     <PackageReference Include="Plisky.Mollycoddle" Version="0.1.4" />
-    <PackageReference Include="Plisky.Versonify" Version="0.1.4" />
+    <PackageReference Include="Plisky.Versonify" Version="0.1.8" />
   </ItemGroup>
 
   <ItemGroup>
