feature: Update versioning and naming conventions
- Added multitargetting and corrected incorrect
- Updated for most recent .editorconfig
- Modified the publishing process to support multiple target frameworks.

--- a/src/Nuke-Fusion.Build/Nuke-Fusion.Build.csproj
+++ b/src/Nuke-Fusion.Build/Nuke-Fusion.Build.csproj
@@ -13,19 +13,16 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.2" />
-    <PackageReference Include="NuGet.CommandLine" Version="6.12.2">
+    <PackageReference Include="NuGet.CommandLine" Version="6.14.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Nuke.Common" Version="9.0.3" />
-    <PackageReference Include="Plisky.Diagnostics" Version="3.2.2" />
-    <PackageReference Include="Plisky.Listeners" Version="3.2.2" />
+    <PackageReference Include="Plisky.Diagnostics" Version="3.2.5" />
+    <PackageReference Include="Plisky.Listeners" Version="3.2.5" />
     <PackageReference Include="Plisky.Mollycoddle" Version="0.1.4" />
+    <PackageReference Include="Plisky.Nuke.Fusion" Version="0.2.0" />
     <PackageReference Include="Plisky.Versonify" Version="0.1.8" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Plisky.Nuke.Fusion\Plisky.Nuke.Fusion.csproj" />
   </ItemGroup>
 
 </Project>
