--- a/src/.editorconfig
+++ b/src/.editorconfig
@@ -1,3 +1,4 @@
+#V1.1 - Added Versioning.
 # top-most EditorConfig file
 root = true
 
@@ -8,12 +9,8 @@ dotnet_style_operator_placement_when_wrapping = beginning_of_line
 tab_width = 4
 indent_size = 4
 end_of_line = crlf
-dotnet_style_coalesce_expression = true:suggestion
-dotnet_style_null_propagation = true:suggestion
 dotnet_style_prefer_is_null_check_over_reference_equality_method = true:suggestion
 dotnet_style_prefer_auto_properties = true:silent
-dotnet_style_object_initializer = true:suggestion
-dotnet_style_collection_initializer = true:suggestion
 dotnet_style_prefer_simplified_boolean_expressions = true:suggestion
 dotnet_style_prefer_conditional_expression_over_assignment = true:silent
 dotnet_style_prefer_conditional_expression_over_return = true:silent
@@ -102,7 +99,8 @@ dotnet_naming_style.customPascalStyle.capitalization               = pascal_case
 dotnet_naming_style.customFullUppercaseStyle.capitalization        = all_upper
 dotnet_naming_style.customCamelCaseStyle.capitalization            = camel_case
 dotnet_naming_style.customCamelCaseStyle.prefix = 
-# Unused?? dotnet_naming_style.customVariableStyle.required_prefix                  = [a-zA-z]
+
+
 dotnet_naming_style.customFieldStyle.capitalization = camel_case
 dotnet_naming_style.customFieldStyle.required_prefix = 
 
@@ -146,13 +144,16 @@ dotnet_naming_symbols.all_constants.applicable_kinds            = field, local
 dotnet_naming_symbols.all_constants.applicable_accessibilities  = *
 
 # Interfaces Start with I and are Pascal Cased (checked)
-dotnet_naming_rule.customInterfaceRule.symbols = customInterfaceRule
+dotnet_naming_rule.customInterfaceRule.symbols = customInterfaceTypes
 dotnet_naming_rule.customInterfaceRule.applicable_kinds = interface
 dotnet_naming_rule.customInterfaceRule.applicable_accessibilities = *
 dotnet_naming_rule.customInterfaceRule.style = customInterfaceRule_style
 dotnet_naming_rule.customInterfaceRule.severity = error
 
-dotnet_naming_style.customInterfaceRule_style.capitalization = customPascalStyle
+dotnet_naming_symbols.customInterfaceTypes.applicable_kinds = interface
+dotnet_naming_symbols.customInterfaceTypes.applicable_accessibilities = *
+
+dotnet_naming_style.customInterfaceRule_style.capitalization = pascal_case
 dotnet_naming_style.customInterfaceRule_style.required_prefix = I
 dotnet_naming_style.customInterfaceRule_style.required_suffix = 
 
