--- a/src/Nuke-Fusion.Build/Nuke-Fusion.Build.csproj
+++ b/src/Nuke-Fusion.Build/Nuke-Fusion.Build.csproj
@@ -22,7 +22,10 @@
     <PackageReference Include="Plisky.Listeners" Version="3.2.5" />
     <PackageReference Include="Plisky.Mollycoddle" Version="0.1.4" />
     <PackageReference Include="Plisky.Nuke.Fusion" Version="0.2.0" />
-    <PackageReference Include="Plisky.Versonify" Version="0.1.8" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageDownload Include="Plisky.Versonify" Version="[1.0.0-Austen.1.3]" />
   </ItemGroup>
 
 </Project>
