--- a/src/Plisky.Nuke.Fusion/Plisky.Nuke.Fusion.csproj
+++ b/src/Plisky.Nuke.Fusion/Plisky.Nuke.Fusion.csproj
@@ -5,9 +5,9 @@
     <LangVersion>latest</LangVersion>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <AssemblyVersion>1.0</AssemblyVersion>
-    <Version>1.0.1-pre.0.4</Version>
-    <FileVersion>1.0.1-pre.0.4</FileVersion>
+    <AssemblyVersion>0.3</AssemblyVersion>
+    <Version>0.3.0-pre.0.3</Version>
+    <FileVersion>0.3.0-pre.0.3</FileVersion>
   </PropertyGroup>
   <PropertyGroup>
     <Summary>Plisky.Nuke.Fusion, providing plisky library support to the Nuke build engine.</Summary>
@@ -21,6 +21,7 @@
     <Description>Plisky.Nuke.Fusion providing plisky tool support to the Nuke build engine..</Description>
     <Copyright>Copyright 2025</Copyright>
     <PackageTags>nuke;cli;build</PackageTags>
+    <PackageIcon>pnf-icon.png</PackageIcon>
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
     <DebugType>portable</DebugType>
