--- a/src/Plisky.Nuke.Fusion/Plisky.Nuke.Fusion.csproj
+++ b/src/Plisky.Nuke.Fusion/Plisky.Nuke.Fusion.csproj
@@ -2,6 +2,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>net8.0;net9.0;</TargetFrameworks>
+    <OutputPath>bin\$(Configuration)\$(TargetFramework)\</OutputPath>
     <LangVersion>latest</LangVersion>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
