--- a/src/Nuke-Fusion.Build/Nuke-Fusion.Build.csproj
+++ b/src/Nuke-Fusion.Build/Nuke-Fusion.Build.csproj
@@ -19,13 +19,13 @@
     </PackageReference>
     <PackageReference Include="Nuke.Common" Version="9.0.4" />
     <PackageReference Include="Plisky.Diagnostics" Version="3.2.5" />
-    <PackageReference Include="Plisky.Listeners" Version="3.2.5" />
-    <PackageReference Include="Plisky.Mollycoddle" Version="0.1.4" />
+    <PackageReference Include="Plisky.Listeners" Version="3.2.5" />    
     <PackageReference Include="Plisky.Nuke.Fusion" Version="0.3.0-pre.0.8" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageDownload Include="Plisky.Versonify" Version="[1.0.1]" />
+    <PackageDownload Include="Plisky.Mollycoddle" Version="[1.0.1]" />
+    <PackageDownload Include="Plisky.Versonify" Version="[1.0.2-Austen.1.1]" />
   </ItemGroup>
 
 </Project>
