feature:#LFY-58 Compatibility Mode added.
Change to call with --qqpnf prior to the actual call to versonify has allowed exit codes to give compatibility versions back to the caller.

--- a/src/Nuke-Fusion.Build/Nuke-Fusion.Build.csproj
+++ b/src/Nuke-Fusion.Build/Nuke-Fusion.Build.csproj
@@ -25,7 +25,7 @@
 
   <ItemGroup>
     <PackageDownload Include="Plisky.Mollycoddle" Version="[1.0.1]" />
-    <PackageDownload Include="Plisky.Versonify" Version="[1.0.2-Austen.1.1]" />
+    <PackageDownload Include="Plisky.Versonify" Version="[1.0.3]" />
   </ItemGroup>
 
 </Project>
